--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+		"verot/class.upload.php":"*"
     },
     "autoload": {
         "psr-0": {
